try fix noodles on safari

--- a/css/jp.css
+++ b/css/jp.css
@@ -58,70 +58,10 @@ p, ol{
 	margin: 20px 0;
 }
 
-img.article, video.article{
-	max-width: 100%;
-	max-height: 550px;
-	margin: 20px 0 0 0;
-	border-radius: 4px;
-	box-shadow:
-	  0 0.7px 2.2px rgba(0, 0, 0, 0.02),
-	  0 1.7px 5.3px rgba(0, 0, 0, 0.028),
-	  0 3.1px 10px rgba(0, 0, 0, 0.035),
-	  0 5.6px 17.9px rgba(0, 0, 0, 0.042),
-	  0 10.4px 33.4px rgba(0, 0, 0, 0.05),
-	  0 25px 80px rgba(0, 0, 0, 0.07)
-	;
-}
-
 div.image--article--column{
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-}
-
-img.article--2column{
-	flex: auto;
-	max-width: 48%;
-	margin: 20px 0 0 0;
-	border-radius: 4px;
-	box-shadow:
-	  0 0.7px 2.2px rgba(0, 0, 0, 0.02),
-	  0 1.7px 5.3px rgba(0, 0, 0, 0.028),
-	  0 3.1px 10px rgba(0, 0, 0, 0.035),
-	  0 5.6px 17.9px rgba(0, 0, 0, 0.042),
-	  0 10.4px 33.4px rgba(0, 0, 0, 0.05),
-	  0 25px 80px rgba(0, 0, 0, 0.07)
-	;
-}
-
-img.article--3column{
-	flex: auto;
-	max-width: 30%;
-	margin: 20px 0 0 0;
-	border-radius: 4px;
-	box-shadow:
-	  0 0.7px 2.2px rgba(0, 0, 0, 0.02),
-	  0 1.7px 5.3px rgba(0, 0, 0, 0.028),
-	  0 3.1px 10px rgba(0, 0, 0, 0.035),
-	  0 5.6px 17.9px rgba(0, 0, 0, 0.042),
-	  0 10.4px 33.4px rgba(0, 0, 0, 0.05),
-	  0 25px 80px rgba(0, 0, 0, 0.07)
-	;
-}
-
-img.article--4column{
-	flex: auto;
-	max-width: 22%;
-	margin: 20px 0 0 0;
-	border-radius: 4px;
-	box-shadow:
-	  0 0.7px 2.2px rgba(0, 0, 0, 0.02),
-	  0 1.7px 5.3px rgba(0, 0, 0, 0.028),
-	  0 3.1px 10px rgba(0, 0, 0, 0.035),
-	  0 5.6px 17.9px rgba(0, 0, 0, 0.042),
-	  0 10.4px 33.4px rgba(0, 0, 0, 0.05),
-	  0 25px 80px rgba(0, 0, 0, 0.07)
-	;
 }
 
 img.empty{
@@ -157,61 +97,10 @@ iframe.youtube{
 	}
 
 	p, ol{
-		font-size: 0.875em;
+		font-size: 1em;
 	}
 	iframe.youtube{
 		height: 166px;
-	}
-	img.article, video.article{
-		max-width: 100%;
-		max-height: 550px;
-		margin: 20px 0 0 0;
-		border-radius: 4px;
-		box-shadow:
-		  0 0.7px 2.2px rgba(0, 0, 0, 0.02),
-		  0 1.7px 5.3px rgba(0, 0, 0, 0.028),
-		  0 3.1px 10px rgba(0, 0, 0, 0.035),
-		  0 5.6px 17.9px rgba(0, 0, 0, 0.042)
-		;
-	}
-
-	img.article--2column{
-		flex: auto;
-		max-width: 48%;
-		margin: 20px 0 0 0;
-		border-radius: 4px;
-		box-shadow:
-		  0 0.7px 2.2px rgba(0, 0, 0, 0.02),
-		  0 1.7px 5.3px rgba(0, 0, 0, 0.028),
-		  0 3.1px 10px rgba(0, 0, 0, 0.035),
-		  0 5.6px 17.9px rgba(0, 0, 0, 0.042)
-		;
-	}
-
-	img.article--3column{
-		flex: auto;
-		max-width: 30%;
-		margin: 20px 0 0 0;
-		border-radius: 4px;
-		box-shadow:
-		  0 0.7px 2.2px rgba(0, 0, 0, 0.02),
-		  0 1.7px 5.3px rgba(0, 0, 0, 0.028),
-		  0 3.1px 10px rgba(0, 0, 0, 0.035),
-		  0 5.6px 17.9px rgba(0, 0, 0, 0.042)
-		;
-	}
-
-	img.article--4column{
-		flex: auto;
-		max-width: 22%;
-		margin: 20px 0 0 0;
-		border-radius: 4px;
-		box-shadow:
-		  0 0.7px 2.2px rgba(0, 0, 0, 0.02),
-		  0 1.7px 5.3px rgba(0, 0, 0, 0.028),
-		  0 3.1px 10px rgba(0, 0, 0, 0.035),
-		  0 5.6px 17.9px rgba(0, 0, 0, 0.042)
-		;
 	}
 }
 
