--- a/css/main.css
+++ b/css/main.css
@@ -363,6 +363,7 @@ div.image--article--column{
 img.article--2column{
 	flex: auto;
 	max-width: 48%;
+	max-height: 550px;
 	margin: 20px 0 0 0;
 	border-radius: 4px;
 	box-shadow:
@@ -378,6 +379,7 @@ img.article--2column{
 img.article--3column{
 	flex: auto;
 	max-width: 30%;
+	max-height: 300px;
 	margin: 20px 0 0 0;
 	border-radius: 4px;
 	box-shadow:
@@ -393,6 +395,7 @@ img.article--3column{
 img.article--4column{
 	flex: auto;
 	max-width: 22%;
+	max-height: 200px;
 	margin: 20px 0 0 0;
 	border-radius: 4px;
 	box-shadow:
